--- a/compose.yaml
+++ b/compose.yaml
@@ -159,8 +159,8 @@ services:
       # ── DBT TARGET & CLICKHOUSE CREDS (EDIT HERE for LOCAL vs REMOTE) ─────
       # DBT_TARGET choices are defined in ./dbt/profiles.yml (e.g., local / remote).
       # LOCAL default (service name):
-      # DBT_TARGET: "local"                     # ← set to "remote" when pointing to server
-      # CH_HOST: "54.87.106.52" # "clickhouse"                   # ← change to "54.87.106.52" for REMOTE
+      DBT_TARGET: "remote"                     # ← set to "remote" when pointing to server
+      CH_HOST: "54.87.106.52" # "clickhouse"                   # ← change to "54.87.106.52" for REMOTE
       CH_HTTP_PORT: "8123"
       CH_TCP_PORT:  "9000"
       CH_USER: "ftw_user"                     # ← teacher sets this on server
